fix z-index of cyto pane

--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ body, html {
     font-size: 1.1rem;
     font-weight: 500;
     pointer-events: none;
+    z-index: 2;
+    background: rgba(255, 255, 255, 0.85);
 }
 
 #empty-workspace-overlay p {
